src/compiler/snapshots/isa__compiler__parser__tests__let_stmts-3.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"let foo (a,b,c) = a + b - c;\").parse_stmt()"
---
Ok(
    Stmt {
        kind: Let(
            LetBind {
                operator: false,
                name: Ident {
                    ident: "foo",
                    span: SpanData { file_id: 0, lo: 4, hi: 7 },
                },
                params: [
                    Param {
                        pat: Pat {
                            kind: Tuple(
                                [
                                    Pat {
                                        kind: Constructor {
                                            name: Path {
                                                segments: [
                                                    Ident {
                                                        ident: "a",
                                                        span: SpanData { file_id: 0, lo: 9, hi: 10 },
                                                    },
                                                ],
                                            },
                                            args: [],
                                        },
                                        span: SpanData { file_id: 0, lo: 9, hi: 10 },
                                        ty: (),
                                    },
                                    Pat {
                                        kind: Constructor {
                                            name: Path {
                                                segments: [
                                                    Ident {
                                                        ident: "b",
                                                        span: SpanData { file_id: 0, lo: 11, hi: 12 },
                                                    },
                                                ],
                                            },
                                            args: [],
                                        },
                                        span: SpanData { file_id: 0, lo: 11, hi: 12 },
                                        ty: (),
                                    },
                                    Pat {
                                        kind: Constructor {
                                            name: Path {
                                                segments: [
                                                    Ident {
                                                        ident: "c",
                                                        span: SpanData { file_id: 0, lo: 13, hi: 14 },
                                                    },
                                                ],
                                            },
                                            args: [],
                                        },
                                        span: SpanData { file_id: 0, lo: 13, hi: 14 },
                                        ty: (),
                                    },
                                ],
                            ),
                            span: SpanData { file_id: 0, lo: 8, hi: 15 },
                            ty: (),
                        },
                    },
                ],
                expr: Expr {
                    kind: Infix {
                        op: Ident {
                            ident: "-",
                            span: SpanData { file_id: 0, lo: 24, hi: 25 },
                        },
                        lhs: Expr {
                            kind: Infix {
                                op: Ident {
                                    ident: "+",
                                    span: SpanData { file_id: 0, lo: 20, hi: 21 },
                                },
                                lhs: Expr {
                                    kind: Path(
                                        Path {
                                            segments: [
                                                Ident {
                                                    ident: "a",
                                                    span: SpanData { file_id: 0, lo: 18, hi: 19 },
                                                },
                                            ],
                                        },
                                    ),
                                    span: SpanData { file_id: 0, lo: 18, hi: 19 },
                                    ty: (),
                                },
                                rhs: Expr {
                                    kind: Path(
                                        Path {
                                            segments: [
                                                Ident {
                                                    ident: "b",
                                                    span: SpanData { file_id: 0, lo: 22, hi: 23 },
                                                },
                                            ],
                                        },
                                    ),
                                    span: SpanData { file_id: 0, lo: 22, hi: 23 },
                                    ty: (),
                                },
                            },
                            span: SpanData { file_id: 0, lo: 18, hi: 23 },
                            ty: (),
                        },
                        rhs: Expr {
                            kind: Path(
                                Path {
                                    segments: [
                                        Ident {
                                            ident: "c",
                                            span: SpanData { file_id: 0, lo: 26, hi: 27 },
                                        },
                                    ],
                                },
                            ),
                            span: SpanData { file_id: 0, lo: 26, hi: 27 },
                            ty: (),
                        },
                    },
                    span: SpanData { file_id: 0, lo: 18, hi: 27 },
                    ty: (),
                },
            },
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 27 },
    },
)
