src/compiler/snapshots/isa__compiler__parser__tests__let_stmts-4.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"let bar _ _ _ = true;\").parse_stmt()"
---
Ok(
    Stmt {
        kind: Let(
            LetBind {
                operator: false,
                name: Ident {
                    ident: "bar",
                    span: SpanData { file_id: 0, start: 4, end: 7 },
                },
                params: [
                    Param {
                        pat: Pat {
                            kind: Wild,
                            span: SpanData { file_id: 0, start: 8, end: 9 },
                            ty: (),
                        },
                    },
                    Param {
                        pat: Pat {
                            kind: Wild,
                            span: SpanData { file_id: 0, start: 10, end: 11 },
                            ty: (),
                        },
                    },
                    Param {
                        pat: Pat {
                            kind: Wild,
                            span: SpanData { file_id: 0, start: 12, end: 13 },
                            ty: (),
                        },
                    },
                ],
                expr: Expr {
                    kind: Bool(
                        true,
                    ),
                    span: SpanData { file_id: 0, start: 16, end: 20 },
                    ty: (),
                },
            },
        ),
        span: SpanData { file_id: 0, start: 0, end: 20 },
    },
)
