src/compiler/snapshots/isa__compiler__parser__tests__let_stmts.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"let a = 10;\").parse_stmt()"
---
Ok(
    Stmt {
        kind: Let(
            LetBind {
                operator: false,
                name: Ident {
                    ident: "a",
                    span: SpanData { file_id: 0, lo: 4, hi: 5 },
                },
                params: [],
                expr: Expr {
                    kind: Int(
                        10,
                    ),
                    span: SpanData { file_id: 0, lo: 8, hi: 10 },
                    ty: (),
                },
            },
        ),
        span: SpanData { file_id: 0, lo: 0, hi: 10 },
    },
)
