src/compiler/snapshots/isa__compiler__parser__tests__lets.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"let a = 10 in 10\").parse_expr()"
---
Ok(
    Expr {
        kind: Let {
            bind: LetBind {
                operator: false,
                name: Ident {
                    ident: "a",
                    span: SpanData { file_id: 0, start: 4, end: 5 },
                },
                params: [],
                expr: Expr {
                    kind: Int(
                        10,
                    ),
                    span: SpanData { file_id: 0, start: 8, end: 10 },
                    ty: (),
                },
            },
            body: Expr {
                kind: Int(
                    10,
                ),
                span: SpanData { file_id: 0, start: 14, end: 16 },
                ty: (),
            },
        },
        span: SpanData { file_id: 0, start: 0, end: 16 },
        ty: (),
    },
)
