src/compiler/snapshots/isa__compiler__parser__tests__matches-2.snap
---
source: src/compiler/parser.rs
expression: "create_parser(\"match (1,2) with (0.., ..0) -> 10, (..0, 0..) -> -10\").parse_expr()"
---
Ok(
    Expr {
        kind: Match {
            expr: Expr {
                kind: Tuple(
                    [
                        Expr {
                            kind: Int(
                                1,
                            ),
                            span: SpanData { file_id: 0, lo: 7, hi: 8 },
                            ty: (),
                        },
                        Expr {
                            kind: Int(
                                2,
                            ),
                            span: SpanData { file_id: 0, lo: 9, hi: 10 },
                            ty: (),
                        },
                    ],
                ),
                span: SpanData { file_id: 0, lo: 6, hi: 11 },
                ty: (),
            },
            arms: [
                MatchArm {
                    pat: Pat {
                        kind: Tuple(
                            [
                                Pat {
                                    kind: IntRange(
                                        From(
                                            0,
                                        ),
                                    ),
                                    span: SpanData { file_id: 0, lo: 18, hi: 21 },
                                    ty: (),
                                },
                                Pat {
                                    kind: IntRange(
                                        To(
                                            0,
                                        ),
                                    ),
                                    span: SpanData { file_id: 0, lo: 23, hi: 26 },
                                    ty: (),
                                },
                            ],
                        ),
                        span: SpanData { file_id: 0, lo: 17, hi: 27 },
                        ty: (),
                    },
                    expr: Expr {
                        kind: Int(
                            10,
                        ),
                        span: SpanData { file_id: 0, lo: 31, hi: 33 },
                        ty: (),
                    },
                },
                MatchArm {
                    pat: Pat {
                        kind: Tuple(
                            [
                                Pat {
                                    kind: IntRange(
                                        To(
                                            0,
                                        ),
                                    ),
                                    span: SpanData { file_id: 0, lo: 36, hi: 39 },
                                    ty: (),
                                },
                                Pat {
                                    kind: IntRange(
                                        From(
                                            0,
                                        ),
                                    ),
                                    span: SpanData { file_id: 0, lo: 41, hi: 44 },
                                    ty: (),
                                },
                            ],
                        ),
                        span: SpanData { file_id: 0, lo: 35, hi: 45 },
                        ty: (),
                    },
                    expr: Expr {
                        kind: Prefix {
                            op: Ident {
                                ident: "-",
                                span: SpanData { file_id: 0, lo: 49, hi: 50 },
                            },
                            expr: Expr {
                                kind: Int(
                                    10,
                                ),
                                span: SpanData { file_id: 0, lo: 50, hi: 52 },
                                ty: (),
                            },
                        },
                        span: SpanData { file_id: 0, lo: 49, hi: 52 },
                        ty: (),
                    },
                },
            ],
        },
        span: SpanData { file_id: 0, lo: 0, hi: 52 },
        ty: (),
    },
)
